--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest --run --reporter verbose",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "eslint": "8.44.0",
@@ -16,6 +19,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "global-jsdom": "^9.0.1",
+    "jsdom": "^22.1.0",
+    "vitest": "^0.32.2"
   }
 }
