--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint",
     "test": "vitest --run --reporter verbose",
     "test:watch": "vitest",
-    "coverage": "vitest run --coverage"
+    "format:fix": "prettier --write ."
   },
   "dependencies": {
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -21,8 +19,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.7",
+    "eslint-config-prettier": "^8.8.0",
     "global-jsdom": "^9.0.1",
     "jsdom": "^22.1.0",
+    "prettier": "^2.8.8",
     "vitest": "^0.32.2"
   }
 }
