--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
+    "mongodb": "^5.6.0",
+    "mongoose": "6.11.1",
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
