--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongodb": "^5.6.0",
     "mongoose": "6.11.1",
     "next": "^13.4.8",
